[package]
name = "set-bft-rmc"
version = "0.16.0"
edition = "2021"
authors = ["Cardinal Cryptography"]
categories = ["algorithms", "cryptography"]
documentation = "https://docs.rs/?"
homepage = "https://setzero.org"
repository = "https://github.com/Cardinal-Cryptography/SetBFT"
keywords = ["asynchronous", "consensus", "bft", "distributed-systems"]
license = "Apache-2.0 OR MIT"
readme = "./README.md"
description = "Reliable MultiCast - a primitive for Reliable Broadcast protocol."

[dependencies]
set-bft-crypto = { path = "../crypto", version = "0.11" }
set-bft-types = { path = "../types", version = "0.16" }
async-trait = "0.1"
codec = { package = "parity-scale-codec", version = "3.0", default-features = false, features = ["derive"] }
futures = "0.3"
futures-timer = "3.0"
log = "0.4"

[dev-dependencies]
set-bft-mock = { path = "../mock" }
rand = "0.8"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "time"] }
