[package]
name = "set-bft-rmc"
version = "0.16.0"
edition = "2021"
authors = [ "Afsall Labs",]
categories = [ "algorithms", "cryptography",]
documentation = "https://docs.rs/?"
homepage = "https://setheum.com"
repository = "https://github.com/setheum/set-bft"
keywords = [ "asynchronous", "consensus", "bft", "distributed-systems",]
license = "Apache-2.0 OR MIT"
readme = "./README.md"
description = "Reliable MultiCast - a primitive for Reliable Broadcast protocol."

[dependencies.set-bft-crypto]
workspace = true

[dependencies.set-bft-types]
workspace = true

[dependencies.async-trait]
workspace = true

[dependencies.codec]
workspace = true
features = [ "derive",]
default-features = false

[dependencies.futures]
workspace = true

[dependencies.futures-timer]
workspace = true

[dependencies.log]
workspace = true

[dev-dependencies.set-bft-mock]
workspace = true

[dev-dependencies.rand]
workspace = true

[dev-dependencies.tokio]
workspace = true
features = [ "macros", "rt", "rt-multi-thread", "time",]
