[package]
name = "set-bft-types"
version = "0.16.0"
edition = "2021"
authors = ["Afsall Labs"]
documentation = "https://docs.rs/?"
homepage = "https://setheum.com"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/setheum/set-bft"
readme = "./README.md"
description = "Traits that need to be implemented by the user of the set-bft package."

[dependencies]
set-bft-crypto = { path = "../crypto", version = "0.11" }
async-trait = "0.1"
codec = { package = "parity-scale-codec", version = "3.0", default-features = false, features = ["derive"] }
futures = "0.3"
