[package]
license = "Apache-2.0 OR MIT"
name = "aggregator"
version = "0.6.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
set-bft-rmc = { workspace = true , default-features = false }
set-bft-types = { workspace = true , default-features = false }
async-trait = { workspace = true , default-features = false }
futures = { workspace = true , default-features = false }
log = { workspace = true , default-features = false }
parity-scale-codec = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = [ "sync", "macros", "time", "rt-multi-thread" ] , default-features = false }
