[package]
license = "Apache-2.0 OR MIT"
name = "network-clique"
version = "0.6.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
rate-limiter = { workspace = true , default-features = false }

async-trait = { workspace = true , default-features = false }
bytes = { workspace = true , default-features = false }
parity-scale-codec = { workspace = true, features = ["std", "derive"] }
derive_more = { workspace = true , default-features = false }
env_logger = { workspace = true , default-features = false }
futures = { workspace = true , default-features = false }
futures-timer = { workspace = true , default-features = false }
hash-db = { workspace = true , default-features = false }
ip_network = { workspace = true , default-features = false }
log = { workspace = true , default-features = false }
lru = { workspace = true , default-features = false }
rand = { workspace = true , default-features = false }
serde = { workspace = true , default-features = false }
substrate-prometheus-endpoint = { workspace = true , default-features = false }
tiny-bip39 = { workspace = true , default-features = false }
tokio = { workspace = true, features = [
    "sync",
    "macros",
    "time",
    "rt-multi-thread",
    "io-util",
    "net",
] }

[dev-dependencies]
set-bft-types = { workspace = true , default-features = false }
set-bft-mock = { workspace = true , default-features = false }
