[package]
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
name = "clisee"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { workspace = true, features = ["derive"] }
codec = { package = 'parity-scale-codec', version = "3.0.0", features = ['derive'] }
contract-metadata = "3.2.0"
contract-transcode = "3.2.0"
dialoguer = "0.10.0"
env_logger = "0.8"
hex = "0.4.3"
ink_metadata = { version = "4.3.0", features = ["derive"] }
log = "0.4"
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0.81"

tokio = { workspace = true, features = ["full"] }

pallet-staking = { workspace = true }
sp-core = { workspace = true, features = ["full_crypto"] }

setheum_client = { path = "../setheum-client" }
primitives = { workspace = true }

[features]
default = ["std"]
std = []
