[package]
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
name = "clisee"
version = "0.1.0"
edition = "2021"

[dependencies]
dialoguer = "0.10.0"

[features]
default = [ "std",]
std = []

[dependencies.anyhow]
workspace = true

[dependencies.clap]
workspace = true
features = [ "derive",]
default-features = false

[dependencies.codec]
workspace = true
features = [ "derive",]

[dependencies.contract-metadata]
workspace = true

[dependencies.contract-transcode]
workspace = true

[dependencies.env_logger]
workspace = true

[dependencies.hex]
workspace = true

[dependencies.ink_metadata]
workspace = true
features = [ "derive",]

[dependencies.log]
workspace = true

[dependencies.serde]
workspace = true
features = [ "derive",]
default-features = false

[dependencies.serde_json]
workspace = true

[dependencies.tokio]
workspace = true
features = [ "full",]
default-features = false

[dependencies.pallet-staking]
workspace = true

[dependencies.sp-core]
workspace = true
features = [ "full_crypto",]

[dependencies.move-core-types]
workspace = true

[dependencies.move-vm-backend-common]
workspace = true


[dependencies.bcs]
workspace = true

[dependencies.setheum_client]
workspace = true
default-features = false

[dependencies.primitives]
workspace = true
default-features = false
