[package]
name = "setheum-e2e-client"
version = "0.12.0"
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[dependencies]
assert2 = "0.3"
once_cell = "1.16"
rayon = "1.5"
serial_test = "1.0.0"
url = "2.4.0"

[features]
default = [ "std",]
std = [ "pallet-staking/std", "pallet-balances/std", "primitives/std",]

[dependencies.anyhow]
workspace = true

[dependencies.codec]
workspace = true
features = [ "derive",]
default-features = false

[dependencies.env_logger]
workspace = true

[dependencies.futures]
workspace = true

[dependencies.hex]
workspace = true

[dependencies.itertools]
workspace = true

[dependencies.log]
workspace = true

[dependencies.rand]
workspace = true

[dependencies.serde_json]
workspace = true

[dependencies.tokio]
workspace = true
features = [ "full",]

[dependencies.subxt]
workspace = true

[dependencies.wat]
workspace = true

[dependencies.sp-core]
workspace = true
default-features = false
features = [ "full_crypto",]

[dependencies.sp-runtime]
workspace = true
default-features = false

[dependencies.frame-support]
workspace = true
default-features = false

[dependencies.frame-system]
workspace = true

[dependencies.pallet-staking]
workspace = true
default-features = false

[dependencies.pallet-balances]
workspace = true
default-features = false

[dependencies.setheum_client]
workspace = true

[dependencies.primitives]
workspace = true
features = [ "short_session",]
default-features = false

[dependencies.pallet-elections]
path = "../runtime-modules/elections"
package = "module-elections"

[dependencies.synthetic-link]
workspace = true
