[package]
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
name = "finalizer"
version = "0.0.2"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { workspace = true, features = ["derive"] }
dialoguer = "0.10.0"
hex = "0.4.3"
subxt = "0.30.1"
tokio = { workspace = true, features = ["full"] }
setheum_client = { path = "../setheum-client" }
futures = "0.3.28"
