[package]
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
name = "finalizer"
version = "0.0.2"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { workspace = true, features = ["derive"] , default-features = false }
dialoguer = "0.10.0"
hex = "0.4.3"
subxt = "0.30.1"
tokio = { workspace = true, features = ["full"] , default-features = false }
setheum_client = { path = "../setheum-client" , default-features = false }
futures = "0.3.28"
