[package]
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
name = "finalizer"
version = "0.0.2"
edition = "2021"

[dependencies]
dialoguer = "0.10.0"

[dependencies.anyhow]
workspace = true

[dependencies.clap]
workspace = true
features = [ "derive",]
default-features = false

[dependencies.hex]
workspace = true

[dependencies.subxt]
workspace = true

[dependencies.tokio]
workspace = true
features = [ "full",]
default-features = false

[dependencies.setheum_client]
workspace = true
default-features = false

[dependencies.futures]
workspace = true
