[package]
authors = [ "Afsall Labs", "Afsall Labs", "Setheum Foundation" ]
build = 'build.rs'
description = 'Setheum Network Node'
edition = '2018'
homepage = 'https:/setheum.com'
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
name = 'setheum-node'
repository = 'https:/github.com/setheum/setheum'
version = '1.0.0'

[[bin]]
name = 'setheum-node'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-build-script-utils = { workspace = true }

[dependencies]
hex-literal = "0.3.1"
jsonrpc-core = '15.1.0'
structopt = '0.3.8'
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0.68"

parity-scale-codec = { workspace = true, features = ["derive"] }
log = { workspace = true }
futures = { workspace = true }
static_assertions = { workspace = true }
thiserror = { workspace = true }
fake-runtime-api = { workspace = true, features = ["std"] }
jsonrpsee = { workspace = true, features = ["server"] }

# Substrate dependencies
frame-benchmarking = { workspace = true }
frame-benchmarking-cli = { workspace = true, optional = true }
pallet-transaction-payment-rpc = { workspace = true }
sc-chain-spec = { workspace = true }
sc-basic-authorship = { workspace = true }
sc-cli = { workspace = true, optional = true }
sc-client-api = { workspace = true }
sc-client-db = { workspace = true }
sc-executor = { workspace = true }
sc-rpc = { workspace = true }
sc-rpc-api = { workspace = true }
sc-service = { workspace = true, optional = true }
sc-transaction-pool = { workspace = true }
sc-transaction-pool-api = { workspace = true }
sc-telemetry = { workspace = true }
sc-network = { workspace = true }
sc-network-sync = { workspace = true }
sp-std = { workspace = true }
sp-api = { workspace = true }
sp-arithmetic = { workspace = true }
sp-block-builder = { workspace = true }
sp-blockchain = { workspace = true }
sp-core = { workspace = true, optional = true }
sp-inherents = { workspace = true }
sp-runtime = { workspace = true }
sp-transaction-pool = { workspace = true }
sp-timestamp = { workspace = true }
substrate-frame-rpc-system = { workspace = true }

sc-keystore = { workspace = true }
sp-keystore = { workspace = true }

sp-consensus = { workspace = true }
sc-consensus = { workspace = true }
sc-consensus-aura = { workspace = true }
sp-consensus-aura = { workspace = true }
sc-consensus-manual-seal = { workspace = true }
sc-consensus-epochs = { workspace = true }
sc-consensus-slots = { workspace = true }



module-oracle-rpc = { path = "../runtime-modules/oracle/rpc" }

module-nft = { path = "../runtime-modules/nft" }
module-evm = { workspace = true }
module-evm-rpc-runtime-api = { path = "../runtime-modules/evm/rpc/runtime_api" }
evm-rpc = { path = "../runtime-modules/evm/rpc" }

setheum-primitives = { path = "../primitives" }

finality-setbft = { workspace = true }
module-setbft-runtime-api = { workspace = true }

# runtime
setheum-runtime = { workspace = true, default-features = false }

[features]
default = [ "cli", "std" ]
cli = [
	"std",
	"sp-core",
	"sc-cli",
	"sc-service",
	"frame-benchmarking-cli",
]
runtime-benchmarks = [
	'setheum-runtime/runtime-benchmarks'
]
std = [
	'setheum-runtime/std'
]
with-ethereum-compatibility = [
	"setheum-runtime/with-ethereum-compatibility"
]
