[package]
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
name = "setheum-primitives"
version = "0.9.81-dev"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
# bstringify = { workspace = true , default-features = false }
enumflags2 = { workspace = true, features = ["serde"] , default-features = false }
hex-literal = { workspace = true , default-features = false }
log = { workspace = true , default-features = false }
num_enum = { workspace = true , default-features = false }
parity-scale-codec = { workspace = true, features = ["max-encoded-len"], default-features = false }
paste = { workspace = true , default-features = false }
scale-info = { workspace = true, default-features = false }
serde = { workspace = true, features = ["alloc", "derive"] , default-features = false }

sp-api = { workspace = true, default-features = false }
sp-application-crypto = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }
sp-staking = { workspace = true, default-features = false }
sp-consensus-aura = { workspace = true, default-features = false }

frame-support = { workspace = true, default-features = false }

module-traits = { workspace = true , default-features = false }
pallet-session = { workspace = true, default-features = false }
fp-evm = { workspace = true, default-features = false }
ethereum = { version = "0.15.0", default-features = false, features = ["with-codec", "with-serde"] }

[dev-dependencies]
serde_json = { workspace = true, features = ["std"] , default-features = false }


[features]
default = ["std"]
std = [
	"enumflags2/serde",
	"ethereum/std",
	"fp-evm/std",
	"frame-support/std",
	"log/std",
	"module-traits/std",
	"num_enum/std",
	"pallet-session/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"serde/std",
	"sp-api/std",
	"sp-application-crypto/std",
	"sp-consensus-aura/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-staking/std",
	"sp-std/std",
]
short_session = []
try-runtime = []
