[package]
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
authors = [ "Afsall Labs", "Afsall Labs", "Setheum Foundation" ]
version = '1.0.0'
edition = '2018'
build = "build.rs"
homepage = 'https://setheum.com'
name = 'setheum-runtime'
repository = 'https://github.com/setheum/setheum'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-wasm-builder = { workspace = true }

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ['derive'] }
smallvec = "1.4.0"
hex-literal = { workspace = true, optional = true }
serde = { workspace = true, optional = true, features = ['derive'] }
serde_json = "1.0.60"
hex = { workspace = true, optional = true }
evm = { version = "0.30.1", optional = true, default-features = false }
log = { workspace = true }

# Substrate dependencies
frame-benchmarking = { workspace = true, optional = true }
frame-executive = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
frame-system-benchmarking = { workspace = true, optional = true }
frame-system-rpc-runtime-api = { workspace = true }
frame-election-provider-support = { workspace = true }
pallet-balances = { workspace = true }
pallet-grandpa = { workspace = true }
pallet-indices = { workspace = true }
pallet-bounties = { workspace = true }
pallet-collective = { workspace = true }
pallet-insecure-randomness-collective-flip = { workspace = true }
pallet-democracy = { workspace = true }
pallet-membership = { workspace = true }
pallet-multisig = { workspace = true }
pallet-proxy = { workspace = true }
pallet-recovery = { workspace = true }
pallet-scheduler = { workspace = true }
pallet-sudo = { workspace = true }
pallet-tips = { workspace = true }
pallet-timestamp = { workspace = true }
pallet-transaction-payment = { workspace = true }
pallet-transaction-payment-rpc-runtime-api = { workspace = true }
sp-api = { workspace = true }
sp-application-crypto = { workspace = true }
sp-block-builder = { workspace = true }
sp-core = { workspace = true }
sp-inherents = { workspace = true }
pallet-treasury = { workspace = true }
pallet-utility = { workspace = true }
sp-io = { workspace = true }
sp-offchain = { workspace = true }
sp-runtime = { workspace = true }
sp-session = { workspace = true }
sp-staking = { workspace = true }
sp-std = { workspace = true }
sp-transaction-pool = { workspace = true }
sp-version = { workspace = true }
libsecp256k1 = { workspace = true, optional = true }

# NPoS
pallet-session = { workspace = true, features = ["historical"] }
pallet-staking = { workspace = true }
pallet-staking-reward-curve = { workspace = true }
pallet-authorship = { workspace = true }
pallet-aura = { workspace = true }
sp-consensus-aura = { workspace = true }
sp-consensus-babe = { workspace = true }
pallet-im-online = { workspace = true }
pallet-offences = { workspace = true }
sp-authority-discovery = { workspace = true }
pallet-authority-discovery = { workspace = true }

pallet-identity = { workspace = true }

# local dependencies

module-authority = { workspace = true }
module-benchmarking = { workspace = true, optional = true }
module-oracle = { workspace = true }
module-oracle-rpc-runtime-api = { package = "module-oracle-runtime-api", path = "../runtime-modules/oracle/runtime-api", default-features = false }
module-tokens = { workspace = true }
module-traits = { workspace = true }


module-transaction-pause = { path = "../runtime-modules/transaction-pause", default-features = false }
module-transaction-payment = { workspace = true }
module-airdrop = { path = "../runtime-modules/airdrop", default-features = false }

module-currencies = { workspace = true }
module-evm = { workspace = true }
module-unified-accounts = { workspace = true }
module-evm-bridge = { workspace = true }
module-evm-rpc-runtime-api = { path = "../runtime-modules/evm/rpc/runtime_api",  default-features = false }
module-evm-manager = { workspace = true }

module-nft = { path = "../runtime-modules/nft", default-features = false }
module-prices = { path = "../runtime-modules/prices", default-features = false }

module-support = { workspace = true }
module-vesting = { workspace = true }

primitives = { workspace = true }
runtime-common = { workspace = true }


[dev-dependencies]
libsecp256k1 = "0.3.4"
hex = "0.4.0"
hex-literal = "0.3.1"

sp-io = { workspace = true }
sp-trie = { workspace = true }


[features]
default = ['std']
std = [
	'codec/std',
	'serde',
	'frame-executive/std',
	'frame-support/std',
	'frame-system/std',
	'frame-system-rpc-runtime-api/std',
	"frame-benchmarking/std",
	'frame-election-provider-support/std',
	'pallet-balances/std',
	"pallet-bounties/std",
	"pallet-collective/std",
	"pallet-democracy/std",
	'pallet-grandpa/std',
	"pallet-indices/std",
	"pallet-membership/std",
	"pallet-multisig/std",
	"pallet-proxy/std",
	"pallet-recovery/std",
	'pallet-insecure-randomness-collective-flip/std',
	'pallet-sudo/std',
	"pallet-scheduler/std",
	'pallet-timestamp/std',
	"pallet-tips/std",
	'pallet-transaction-payment/std',
	'pallet-transaction-payment-rpc-runtime-api/std',
	"pallet-treasury/std",
	"pallet-utility/std",
	"pallet-session/std",
	"pallet-staking/std",
	"pallet-authorship/std",
	"pallet-aura/std",
	"sp-consensus-aura/std",
	"sp-consensus-babe/std",
	"sp-authority-discovery/std",
	"pallet-authority-discovery/std",
	"pallet-im-online/std",
	"pallet-offences/std",
	"pallet-identity/std",

	"sp-api/std",
	"sp-block-builder/std",
	"sp-core/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-staking/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",

	"module-traits/std",
	"module-tokens/std",
	"module-authority/std",
	"module-benchmarking/std",
	"module-oracle-rpc-runtime-api/std",
	"module-oracle/std",

	"module-airdrop/std",
	"module-currencies/std",
	"module-evm/std",
	"module-unified-accounts/std",
	"module-evm-bridge/std",
	"module-evm-manager/std",
	"module-evm-rpc-runtime-api/std",
	"module-nft/std",
	"module-prices/std",
	"module-support/std",
	"module-transaction-pause/std",
	"module-vesting/std",

	"primitives/std",
	"runtime-common/std",

]
with-ethereum-compatibility = [
	"evm",
	"module-evm/with-ethereum-compatibility",
	"runtime-common/with-ethereum-compatibility",
]
runtime-benchmarks = [
	'hex-literal',
	"libsecp256k1/hmac",

	'frame-benchmarking',
	'frame-support/runtime-benchmarks',
	'frame-system-benchmarking',
	'frame-system/runtime-benchmarks',
	'pallet-balances/runtime-benchmarks',
	"pallet-collective/runtime-benchmarks",
	'pallet-timestamp/runtime-benchmarks',
	'sp-runtime/runtime-benchmarks',

	"module-unified-accounts/runtime-benchmarks",
	"module-nft/runtime-benchmarks",
	"module-vesting/runtime-benchmarks",

	"module-benchmarking",
	"module-authority/runtime-benchmarks",
	"module-tokens/runtime-benchmarks",
]