[package]
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
authors = [ "Afsall Labs", "Afsall Labs", "Setheum Foundation" ]
version = '1.0.0'
edition = '2018'
build = "build.rs"
homepage = 'https://setheum.com'
name = 'setheum-runtime'
repository = 'https://github.com/setheum/setheum'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-wasm-builder = { workspace = true , default-features = false }

[dependencies]
codec = { package = "parity-scale-codec", workspace = true, default-features = false, features = ['derive'] }
smallvec = { workspace = true }
hex-literal = { workspace = true, optional = true , default-features = false }
serde = { workspace = true, optional = true, features = ['derive'] , default-features = false }
serde_json = { workspace = true, default-features = false }
hex = { workspace = true, optional = true , default-features = false }
evm = { version = "0.30.1", optional = true, default-features = false }
log = { workspace = true , default-features = false }

# Substrate dependencies
frame-benchmarking = { workspace = true, optional = true, default-features = false }
frame-executive = { workspace = true, default-features = false }
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
frame-system-benchmarking = { workspace = true, optional = true, default-features = false }
frame-system-rpc-runtime-api = { workspace = true, default-features = false }
frame-election-provider-support = { workspace = true, default-features = false }
pallet-balances = { workspace = true, default-features = false }
pallet-grandpa = { workspace = true, default-features = false }
pallet-indices = { workspace = true, default-features = false }
pallet-bounties = { workspace = true, default-features = false }
pallet-collective = { workspace = true, default-features = false }
pallet-insecure-randomness-collective-flip = { workspace = true, default-features = false }
pallet-democracy = { workspace = true, default-features = false }
pallet-membership = { workspace = true, default-features = false }
pallet-multisig = { workspace = true, default-features = false }
pallet-proxy = { workspace = true, default-features = false }
pallet-recovery = { workspace = true, default-features = false }
pallet-scheduler = { workspace = true, default-features = false }
pallet-sudo = { workspace = true, default-features = false }
pallet-tips = { workspace = true, default-features = false }
pallet-timestamp = { workspace = true, default-features = false }
pallet-transaction-payment = { workspace = true, default-features = false }
pallet-transaction-payment-rpc-runtime-api = { workspace = true, default-features = false }
sp-api = { workspace = true, default-features = false }
sp-application-crypto = { workspace = true, default-features = false }
sp-block-builder = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
sp-inherents = { workspace = true, default-features = false }
pallet-treasury = { workspace = true, default-features = false }
pallet-utility = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
sp-offchain = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-session = { workspace = true, default-features = false }
sp-staking = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }
sp-transaction-pool = { workspace = true, default-features = false }
sp-version = { workspace = true, default-features = false }
libsecp256k1 = { workspace = true, optional = true , default-features = false }

# NPoS
pallet-session = { workspace = true, features = ["historical"], default-features = false }
pallet-staking = { workspace = true, default-features = false }
pallet-staking-reward-curve = { workspace = true, default-features = false }
pallet-authorship = { workspace = true, default-features = false }
pallet-aura = { workspace = true, default-features = false }
sp-consensus-aura = { workspace = true, default-features = false }
sp-consensus-babe = { workspace = true, default-features = false }
pallet-im-online = { workspace = true, default-features = false }
pallet-offences = { workspace = true, default-features = false }
sp-authority-discovery = { workspace = true, default-features = false }
pallet-authority-discovery = { workspace = true, default-features = false }

pallet-identity = { workspace = true, default-features = false }

# local dependencies

module-authority = { workspace = true , default-features = false }
module-benchmarking = { workspace = true, optional = true , default-features = false }
module-oracle = { workspace = true , default-features = false }
module-oracle-rpc-runtime-api = { package = "module-oracle-runtime-api", path = "../runtime-modules/oracle/runtime-api", default-features = false }
module-tokens = { workspace = true , default-features = false }
module-traits = { workspace = true , default-features = false }


module-transaction-pause = { path = "../runtime-modules/transaction-pause", default-features = false }
module-transaction-payment = { workspace = true , default-features = false }
module-airdrop = { path = "../runtime-modules/airdrop", default-features = false }

module-currencies = { workspace = true , default-features = false }
module-evm = { workspace = true , default-features = false }
module-unified-accounts = { workspace = true , default-features = false }
module-evm-bridge = { workspace = true , default-features = false }
module-evm-rpc-runtime-api = { path = "../runtime-modules/evm/rpc/runtime_api",  default-features = false }
module-evm-manager = { workspace = true , default-features = false }

module-nft = { path = "../runtime-modules/nft", default-features = false }
module-prices = { path = "../runtime-modules/prices", default-features = false }

module-support = { workspace = true , default-features = false }
module-vesting = { workspace = true , default-features = false }

primitives = { workspace = true , default-features = false }
runtime-common = { workspace = true , default-features = false }


[dev-dependencies]
libsecp256k1 = "0.3.4"
hex = "0.4.0"
hex-literal = "0.3.1"

sp-io = { workspace = true, default-features = false }
sp-trie = { workspace = true, default-features = false }


[features]
default = ['std']
std = [
	'codec/std',
	'serde',
	'frame-executive/std',
	'frame-support/std',
	'frame-system/std',
	'frame-system-rpc-runtime-api/std',
	"frame-benchmarking/std",
	'frame-election-provider-support/std',
	'pallet-balances/std',
	"pallet-bounties/std",
	"pallet-collective/std",
	"pallet-democracy/std",
	'pallet-grandpa/std',
	"pallet-indices/std",
	"pallet-membership/std",
	"pallet-multisig/std",
	"pallet-proxy/std",
	"pallet-recovery/std",
	'pallet-insecure-randomness-collective-flip/std',
	'pallet-sudo/std',
	"pallet-scheduler/std",
	'pallet-timestamp/std',
	"pallet-tips/std",
	'pallet-transaction-payment/std',
	'pallet-transaction-payment-rpc-runtime-api/std',
	"pallet-treasury/std",
	"pallet-utility/std",
	"pallet-session/std",
	"pallet-staking/std",
	"pallet-authorship/std",
	"pallet-aura/std",
	"sp-consensus-aura/std",
	"sp-consensus-babe/std",
	"sp-authority-discovery/std",
	"pallet-authority-discovery/std",
	"pallet-im-online/std",
	"pallet-offences/std",
	"pallet-identity/std",

	"sp-api/std",
	"sp-block-builder/std",
	"sp-core/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-staking/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",

	"module-traits/std",
	"module-tokens/std",
	"module-authority/std",
	"module-benchmarking/std",
	"module-oracle-rpc-runtime-api/std",
	"module-oracle/std",

	"module-airdrop/std",
	"module-currencies/std",
	"module-evm/std",
	"module-unified-accounts/std",
	"module-evm-bridge/std",
	"module-evm-manager/std",
	"module-evm-rpc-runtime-api/std",
	"module-nft/std",
	"module-prices/std",
	"module-support/std",
	"module-transaction-pause/std",
	"module-vesting/std",

	"primitives/std",
	"runtime-common/std",

]
with-ethereum-compatibility = [
	"evm",
	"module-evm/with-ethereum-compatibility",
	"runtime-common/with-ethereum-compatibility",
]
runtime-benchmarks = [
	'hex-literal',
	"libsecp256k1/hmac",

	'frame-benchmarking',
	'frame-support/runtime-benchmarks',
	'frame-system-benchmarking',
	'frame-system/runtime-benchmarks',
	'pallet-balances/runtime-benchmarks',
	"pallet-collective/runtime-benchmarks",
	'pallet-timestamp/runtime-benchmarks',
	'sp-runtime/runtime-benchmarks',

	"module-unified-accounts/runtime-benchmarks",
	"module-nft/runtime-benchmarks",
	"module-vesting/runtime-benchmarks",

	"module-benchmarking",
	"module-authority/runtime-benchmarks",
	"module-tokens/runtime-benchmarks",
]
