[package]
name = "setheum_client"
version = "0.1.0"
documentation = "https://docs.rs/setheum_client"
readme = "README.md"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license = "Apache-2.0 OR MIT"
description = "This crate provides a Rust application interface for submitting transactions to `setheum` chain."

[dependencies]
async-trait = "0.1.58"
anyhow = "1.0"
codec = { package = 'parity-scale-codec', version = "3.0.0", features = ['derive'] }
hex = { workspace = true, features = ["alloc"] }
log = "0.4"
thiserror = "1.0"
serde_json = { workspace = true }
contract-transcode = "3.2.0"
ink_metadata = { version = "4.3.0" }
subxt = { version = "0.30.1", features = ["substrate-compat"] }
futures = "0.3.25"
serde = { workspace = true, features = ["derive"] }

pallet-contracts = { workspace = true }

primitives = { workspace = true }

[dev-dependencies]
tokio = "1.21"
