[package]
name = "setheum_client"
version = "0.1.0"
documentation = "https://docs.rs/setheum_client"
readme = "README.md"
license = "Apache-2.0 OR MIT"
description = "This crate provides a Rust application interface for submitting transactions to `setheum` chain."

[package.authors]
workspace = true

[package.edition]
workspace = true

[package.homepage]
workspace = true

[package.repository]
workspace = true

[dependencies.async-trait]
workspace = true

[dependencies.anyhow]
workspace = true

[dependencies.codec]
workspace = true
features = [ "derive",]

[dependencies.hex]
workspace = true
features = [ "alloc",]

[dependencies.log]
workspace = true

[dependencies.thiserror]
workspace = true

[dependencies.serde_json]
workspace = true

[dependencies.contract-transcode]
workspace = true

[dependencies.ink_metadata]
workspace = true

[dependencies.subxt]
workspace = true
features = [ "substrate-compat",]

[dependencies.futures]
workspace = true

[dependencies.serde]
workspace = true
features = [ "derive",]

[dependencies.pallet-contracts]
workspace = true

[dependencies.primitives]
workspace = true
features = [ "std",]

[dev-dependencies.tokio]
workspace = true
