[package]
name = "x-core"
version = "0.1.0"
authors = [ "Diem Association <opensource@diem.com>",]
description = "Core data structures used by x"
edition = "2021"
publish = false
license = "Apache-2.0"

[dependencies]
debug-ignore = "1.0.1"
determinator = "0.7.0"
guppy = "0.12.3"
indoc = "1.0.3"
toml = "0.5.8"
once_cell = "1.7.2"
ouroboros = "0.9.2"

[dependencies.camino]
version = "1.0.3"
features = [ "serde1",]

[dependencies.hex]
workspace = true

[dependencies.log]
workspace = true

[dependencies.serde]
workspace = true
features = [ "derive",]
