[package]
name = "x-lint"
version = "0.1.0"
authors = [ "Diem Association <opensource@diem.com>",]
description = "Lint engine for x"
edition = "2021"
publish = false
license = "Apache-2.0"

[dependencies]
camino = "1.0.3"
guppy = "0.12.3"
once_cell = "1.7.2"
toml = "0.5.8"

[dependencies.serde]
workspace = true
features = [ "derive",]

[dependencies.x-core]
workspace = true
