[package]
name = "x"
version = "0.1.0"
authors = [ "Diem Association <opensource@diem.com>",]
description = "Diem extended cargo tasks"
edition = "2021"
publish = false
license = "Apache-2.0"

[dependencies]
camino = "1.0.3"
determinator = "0.7.0"
colored-diff = "0.2.2"
indoc = "1.0.3"
toml = "0.5.8"
chrono = "0.4.19"
globset = "0.4.6"
regex = "1.5.5"
rayon = "1.5.0"
indexmap = "1.6.2"
supports-color = "1.3.0"

[dependencies.cargo_metadata]
workspace = true

[dependencies.serde]
workspace = true
features = [ "derive",]

[dependencies.serde_json]
workspace = true

[dependencies.clap]
workspace = true
features = [ "derive",]

[dependencies.anyhow]
workspace = true

[dependencies.guppy]
version = "0.12.3"
features = [ "summaries",]

[dependencies.env_logger]
workspace = true

[dependencies.log]
workspace = true

[dependencies.nextest-config]
git = "https://github.com/diem/diem-devtools"
rev = "f99a204e3d3f8e503d51d7df42e55c8282b59154"

[dependencies.nextest-runner]
git = "https://github.com/diem/diem-devtools"
rev = "f99a204e3d3f8e503d51d7df42e55c8282b59154"

[dependencies.x-core]
workspace = true

[dependencies.x-lint]
workspace = true
