[[bench]]
name = "vm_benches"
harness = false

[package]
name = "language-benchmarks"
version = "0.1.0"
authors = [ "Diem Association <opensource@diem.com>",]
description = "Move language benchmarks"
repository = "https://github.com/diem/diem"
homepage = "https://diem.com"
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
criterion = "0.3.4"
once_cell = "1.7.2"
proptest = "1.0.0"
criterion-cpu-time = "0.1.0"

[dependencies.anyhow]
workspace = true

[dependencies.move-bytecode-verifier]
workspace = true

[dependencies.move-core-types]
workspace = true

[dependencies.move-compiler]
workspace = true

[dependencies.move-vm-runtime]
workspace = true

[dependencies.move-vm-test-utils]
workspace = true

[dependencies.move-vm-types]
workspace = true

[dependencies.move-binary-format]
workspace = true

[dependencies.move-stdlib]
workspace = true
